--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
  
-<body background="bg.jpg" style=" background-repeat:no-repeat ;background-size:100% 100%;
+<body background="img/bg.jpg" style=" background-repeat:no-repeat ;background-size:100% 100%;
 background-attachment: fixed;">
 <p><center>看，我在哪里</center></p>
 </body>
