--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     	<title>Gua's Blog</title>
 </head>
 <body>
- 
-<body background="img/bg.jpg" style=" background-repeat:no-repeat ;background-size:100% 100%;
-background-attachment: fixed;">
-<p><center>看，我在哪里</center></p>
+ 	 background-size: 100% 100%;
+         background-image: url("img/bg.jpg") ;
+         background-repeat: no-repeat;
+         background-attachment: fixed;
+
 </body>
 </html>
