--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     	<meta charset="UTF-8">
     	<title>Gua's Blog</title>
 </head>
-<body>
- 	 background-size: 100% 100%;
+<body background-size: 100% 100%;
          background-image: url("img/bg.jpg") ;
          background-repeat: no-repeat;
-         background-attachment: fixed;
+         background-attachment: fixed;>
+ 	 
 
 </body>
 </html>
