--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
 <html>
-<head>
-    	<meta charset="UTF-8">
-    	<title>Gua's Blog</title>
-</head>
-<body background-size: 100% 100%;
-         background-image: url("img/bg.jpg") ;
-         background-repeat: no-repeat;
-         background-attachment: fixed;>
- 	 
-
-</body>
+         <head>
+		<charset="UTF-8">
+		<title>AGua's Blog</title>
+         </head>
+         <body background="img/bg.jpg" 
+               style="background-repeat:no-repeat
+               background-attachment:fixed;
+               background-size:100% 100%; ">
+         </body>
 </html>
